--- a/ml/0_basic_optimization_exact.ipynb
+++ b/ml/0_basic_optimization_exact.ipynb
@@ -168,11 +168,70 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Example: optimizing revenue\n",
+    "\n",
+    "We have two recipees and a limited number of ingredients:\n",
+    "\n",
+    "* Recipee A, worth 5 euros, takes 2 of ingredient U and 1 of ingredient V\n",
+    "* Recipee B, worth 4 euros, takes 1 of ingredient U and 3 of ingredient V\n",
+    "* We have 20 of ingredient U and 30 of ingredient V\n",
+    "\n",
+    "What is the best revenue we can made with this limited amount of supply? We can formalize it as maximizing $f(x,y) = 5x + 4y$, subject to the constraints: $2x + y \\le 20$ and $x + 3y \\le 30$. We can build a Langrangian for it:\n",
+    "\n",
+    "&emsp; $\\mathcal{L} = 5x + 4y - \\lambda_1 (2x + y - 20) - \\lambda_2 (x + 3y - 30)$\n",
+    "&emsp; with\n",
+    "&emsp; $\\lambda_1 \\ge 0$\n",
+    "&emsp; and\n",
+    "&emsp; $\\lambda_2 \\ge 0$\n",
+    "\n",
+    "Setting the gradient $\\nabla \\mathcal{L} = 0$, we obtain:\n",
+    "\n",
+    "&emsp; $\\displaystyle \\frac{\\partial \\mathcal{L}}{\\partial x} = 5 - 2\\lambda_1 - \\lambda_2 = 0$\n",
+    "&emsp; and\n",
+    "&emsp; $\\displaystyle \\frac{\\partial \\mathcal{L}}{\\partial y} = 4 - \\lambda_1 - 3\\lambda_2 = 0$\n",
+    "&emsp; $\\implies$\n",
+    "&emsp; $\\lambda_1 = 3/5$\n",
+    "&emsp; $\\lambda_2 = 11/5$\n",
+    "\n",
+    "Since the lambdas are not null, we know we are touching the boundary (the constraints are used), and we can look at the partial derivative with respect to the lambdas:\n",
+    "\n",
+    "&emsp; $\\displaystyle \\frac{\\partial \\mathcal{L}}{\\partial \\lambda_1} = 2x + y - 20 = 0$\n",
+    "&emsp; and\n",
+    "&emsp; $\\displaystyle \\frac{\\partial \\mathcal{L}}{\\partial \\lambda_2} = x + 3y - 30 = 0$\n",
+    "&emsp; $\\implies$\n",
+    "&emsp; $x = 6$\n",
+    "&emsp; $y = 8$\n",
+    "\n",
+    "So the maximum possible revenue is $5x + 4y = 30 + 32 = 62$, which we can verify by exploring all possibilities with code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(62, 6, 8)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max((5 * x + 4 * y, x, y)\n",
+    "    for x in range(10+1)\n",
+    "    for y in range(10+1)\n",
+    "    if 2 * x + y <= 20 and x + 3 * y <= 30)"
+   ]
   }
  ],
  "metadata": {
