--- a/ml/0_basic_distribution_gaussian.ipynb
+++ b/ml/0_basic_distribution_gaussian.ipynb
@@ -47,23 +47,19 @@
     "\n",
     "### Product of gaussians\n",
     "\n",
-    "The product of gaussian appears quite often in Bayesian treatment of machine learning, in which we will often marginalize the probability of $x$ over the parameters $w$ of a model $p(x|w)$:\n",
+    "The product of two independent gaussian distribution is still a gaussian distribution:\n",
     "\n",
-    "&emsp; $\\displaystyle p(x) = \\int_{\\mathcal{W}} p(x|w) \\, p(w) \\, dw$\n",
-    "\n",
-    "If $w$ follows a gaussian distribution, and if $x$ is gaussian, with a mean that is a linear function on $w$, then the resulting distribution is also gaussian:\n",
-    "\n",
-    "&emsp; $p(w) = \\mathcal{N}(\\mu_{w}, \\; \\sigma_{w}^2)$\n",
+    "&emsp; $\\displaystyle p(x) = \\mathcal{N}(a,A)$\n",
     "&emsp; and\n",
-    "&emsp; $p(x|w) = \\mathcal{N}(a w + b, \\; \\alpha^2)$\n",
+    "&emsp; $\\displaystyle p(y) = \\mathcal{N}(b,B)$\n",
     "&emsp; $\\implies$\n",
-    "&emsp; $p(x) = \\mathcal{N}(a \\mu_w + b, \\; a^2 \\sigma_w^2 + \\alpha^2)$\n",
+    "&emsp; $\\displaystyle p(x)p(y) = \\mathcal{N}(c,C)$\n",
     "\n",
-    "This has a link with correlation, which is the reduction of variance of $x$, knowing $w$.\n",
+    "&emsp; $C^{-1} = A^{-1} + B^{-1}$\n",
+    "&emsp; &emsp; (sum of precisions)\n",
     "\n",
-    "&emsp; $\\displaystyle r^2 = \\frac{\\sigma_x^2 - \\alpha^2}{\\sigma_x^2} = \\frac{a^2 \\sigma_w^2}{\\sigma_x^2}$\n",
-    "&emsp; $\\implies$\n",
-    "&emsp; $\\displaystyle r = \\frac{a \\sigma_w}{\\sigma_x} = \\frac{a \\sigma_w^2}{\\sigma_x \\sigma_w} = \\frac{\\mathbb{C}\\text{ov}[x,w]}{\\sqrt{\\mathbb{V}[x] \\mathbb{V}[w]}}$"
+    "&emsp; $c = C(A^{-1} a + B^{-1} b)$\n",
+    "&emsp; (weighted average)"
    ]
   },
   {
@@ -74,7 +70,21 @@
     "\n",
     "### Convolutions of gaussians\n",
     "\n",
-    "This previous formula can be applied for the convolution of two gaussian. This occurs whenever we want to know the distribution of the **sum of two independent** variables $t = x + y$ that each follow a gaussian distribution:\n",
+    "The convolution of two gaussians, which appears quite often in Bayesian treatment of machine learning, in which we will often marginalize the probability of $x$ over the parameters $w$ of a model $p(x|w)$, is also a gaussian if the mean of $p(x|w)$ is linear in $w$:\n",
+    "\n",
+    "&emsp; $\\displaystyle p(x) = \\int p(x|w) \\, p(w) \\, dw$\n",
+    "&emsp; $p(w) = \\mathcal{N}(\\mu_{w}, \\, \\sigma_{w}^2)$\n",
+    "&emsp; $p(x|w) = \\mathcal{N}(a w + b, \\, \\alpha^2)$\n",
+    "&emsp; $\\implies$\n",
+    "&emsp; $\\boxed{p(x) = \\mathcal{N}(a \\mu_w + b, \\; a^2 \\sigma_w^2 + \\alpha^2)}$\n",
+    "\n",
+    "We can see the link with the correlation, the reduction of variance of $x$ knowing $w$.\n",
+    "\n",
+    "&emsp; $\\displaystyle r^2 = \\frac{\\sigma_x^2 - \\alpha^2}{\\sigma_x^2} = \\frac{a^2 \\sigma_w^2}{\\sigma_x^2}$\n",
+    "&emsp; $\\implies$\n",
+    "&emsp; $\\displaystyle r = \\frac{a \\sigma_w}{\\sigma_x} = \\frac{a \\sigma_w^2}{\\sigma_x \\sigma_w} = \\frac{\\mathbb{C}\\text{ov}[x,w]}{\\sqrt{\\mathbb{V}[x] \\mathbb{V}[w]}}$\n",
+    "\n",
+    "This previous formula can be applied for the special case of the **sum of two independent** variables $t = x + y$:\n",
     "\n",
     "&emsp; $\\displaystyle p(t) = \\int_{\\mathcal{X}} p(t|x) \\, p(x) \\, dx$\n",
     "&emsp; where\n",
@@ -242,19 +252,59 @@
     "\n",
     "### Product of gaussians\n",
     "\n",
-    "The product of gaussian appears quite often in Bayesian treatment of machine learning, in which we will often marginalize the probability of $x$ over the parameters $w$ of a model $p(x|w)$:\n",
+    "The product of two independent gaussian distribution is still a gaussian distribution:\n",
     "\n",
-    "&emsp; $\\displaystyle p(x) = \\int_{\\mathcal{W}} p(x|w) \\, p(w) \\, dw$\n",
-    "\n",
-    "If $w$ follows a gaussian distribution, and if $x$ is gaussian, with a mean that is a linear function on $w$, then the resulting distribution is also gaussian:\n",
-    "\n",
-    "&emsp; $p(x) = \\mathcal{N}(\\mu_x, \\; \\Sigma_x)$\n",
+    "&emsp; $\\displaystyle p(x) = \\mathcal{N}(a,A)$\n",
     "&emsp; and\n",
-    "&emsp; $p(y|x) = \\mathcal{N}(A x + b, \\; \\Sigma)$\n",
+    "&emsp; $\\displaystyle p(y) = \\mathcal{N}(b,B)$\n",
+    "&emsp; $\\implies$\n",
+    "&emsp; $\\displaystyle p(x)p(y) = \\mathcal{N}(c,C)$\n",
+    "\n",
+    "&emsp; $C^{-1} = A^{-1} + B^{-1}$\n",
+    "&emsp; &emsp; (sum of precisions)\n",
+    "\n",
+    "&emsp; $c = C(A^{-1} a + B^{-1} b)$\n",
+    "&emsp; (weighted average)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Convolution of gaussians\n",
+    "\n",
+    "The convolution of two gaussians, which appears quite often in Bayesian treatment of machine learning, in which we will often marginalize the probability of $x$ over the parameters $w$ of a model $p(x|w)$, is also a gaussian if the mean of $p(x|w)$ is linear in $w$:\n",
+    "\n",
+    "&emsp; $\\displaystyle p(x) = \\int p(x|w) \\, p(w) \\, dw$\n",
+    "&emsp; $p(x) = \\mathcal{N}(\\mu_x, \\, \\Sigma_x)$\n",
+    "&emsp; $p(y|x) = \\mathcal{N}(A x + b, \\, \\Sigma)$\n",
     "&emsp; $\\implies$\n",
     "&emsp; $\\boxed{p(y) = \\mathcal{N}(A \\mu_x + b, \\; A \\Sigma_x A^T + \\Sigma)}$\n",
     "\n",
     "Which is basically the same as the formula for single variables: $p(y) = \\mathcal{N}(a \\mu_x + b, \\; a^2 \\sigma_x^2 + \\sigma^2)$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### Marginalizing\n",
+    "\n",
+    "Marginalizing a gaussian $\\mathcal{N}(x|\\mu,\\Sigma)$ returns a new gaussian:\n",
+    "\n",
+    "&emsp; $x = \\begin{pmatrix} a \\\\ b \\end{pmatrix}$\n",
+    "&emsp; $\\mu = \\begin{pmatrix} \\mu_a \\\\ \\mu_b \\end{pmatrix}$\n",
+    "&emsp; $\\Sigma = \\begin{pmatrix} \\Sigma_{aa} & \\Sigma_{ab} \\\\ \\Sigma_{ba} & \\Sigma_{bb} \\end{pmatrix}$\n",
+    "&emsp; with\n",
+    "&emsp; $\\Sigma_{ab} = \\Sigma_{ba}^T$\n",
+    "&emsp; $\\implies$\n",
+    "&emsp; $p(a) = \\mathcal{N}(\\mu_a, \\Sigma_{aa})$\n",
+    "\n",
+    "Basically, we can slice the gaussian, and still get a gaussian."
    ]
   },
   {
@@ -268,9 +318,7 @@
     "If we know the value of some of the variables, the distribution of the non-observed variable conditioned on the value of the observed variables is also gaussian. Without loss of generality, we take the parameters of the form:\n",
     "\n",
     "&emsp; $x = \\begin{pmatrix} a \\\\ b \\end{pmatrix}$\n",
-    "&emsp;\n",
     "&emsp; $\\mu = \\begin{pmatrix} \\mu_a \\\\ \\mu_b \\end{pmatrix}$\n",
-    "&emsp;\n",
     "&emsp; $\\Sigma = \\begin{pmatrix} \\Sigma_{aa} & \\Sigma_{ab} \\\\ \\Sigma_{ba} & \\Sigma_{bb} \\end{pmatrix}$\n",
     "&emsp; with\n",
     "&emsp; $\\Sigma_{ab} = \\Sigma_{ba}^T$\n",
