--- a/ml/0_basic_probabilities.ipynb
+++ b/ml/0_basic_probabilities.ipynb
@@ -19,7 +19,7 @@
     "# Discrete random variables\n",
     "---\n",
     "\n",
-    "A random variable $X$ is a variable whose value depends on some random phenomenon. A **discrete random variable** is a variable which has a countable number of values $\\mathcal{X}$ (which might still be infinite, such as $\\mathbb{N}$ or $\\mathbb{Z}$).\n",
+    "A random variable $X$ is a variable whose value depends on some random phenomenon. A **discrete random variable**, or **categorical variable** is a variable which has a countable number of values $\\mathcal{X}$ (which might still be infinite, such as $\\mathbb{N}$ or $\\mathbb{Z}$).\n",
     "\n",
     "<br>\n",
     "\n",
@@ -59,13 +59,17 @@
     "\n",
     "### Expected value\n",
     "\n",
-    "The **expected value** of a function $f \\in \\mathcal{X} \\rightarrow \\mathbb{R}$ applied on the value of $X$ is the average value that this function will take under the probability mass function of $X$ (technically, the expectation is a *functional* as it takes a function as input):\n",
+    "The **expected value** of a function $f \\in \\mathcal{X} \\rightarrow \\mathbb{R}$ applied on the value of $X$ is the average value that this function will take under the probability mass function of $X$ (technically, the expectation is a *functional*), and the **mean** is the expected value of the identity function:\n",
     "\n",
-    "&emsp; $\\displaystyle E_X[f] = \\sum_{x \\in X} f(x) P(x)$\n",
-    "&emsp; (expected value of $f(X)$)\n",
-    "\n",
+    "&emsp; $\\displaystyle \\mathbb{E}_X[f] = \\sum_{x \\in X} f(x) P(x)$\n",
+    "&emsp;\n",
     "&emsp; $\\displaystyle E_X[X] = \\sum_{x \\in X} x P(x)$\n",
-    "&emsp; &emsp; (expected value of the random variable $X$)\n",
+    "\n",
+    "The expected value is linear (by definition), which implies:\n",
+    "\n",
+    "&emsp; $\\displaystyle \\mathbb{E}_X[a f+ b g] = a \\, \\mathbb{E}_X[f] + b \\, \\mathbb{E}_X[g]$\n",
+    "\n",
+    "For multivariate distributions, the expected value of a vector is the vector of the expected value of each separate dimension.\n",
     "\n",
     "\n",
     "<br>\n",
@@ -74,11 +78,19 @@
     "\n",
     "The **variance** of $X$ is the expected value of the square of the difference between the values taken by the random variable $X$ and the mean value of $X$. The **standard deviation** is the square root of the variance, and expresses the *spread* of a distribution around its mean:\n",
     "\n",
-    "&emsp; $\\displaystyle \\sigma^2[X] = E[(X-E[X])^2] = E[X^2] - E[X]^2$\n",
+    "&emsp; $\\displaystyle \\mathbb{V}[X] = E[(X-E[X])(X-E[X])^T] = E[X X^T] - E[X]E[X]^T \\in \\mathbb{R}^{D \\times D}$\n",
     "\n",
     "The **covariance** is a generalisation of the variance for two random variables $X$ and $Y$:\n",
     "\n",
-    "&emsp; $\\displaystyle \\text{Cov}[X,Y] = E[(X-E[X])(Y-E[Y])] = E[XY] - E[X]E[Y]$"
+    "&emsp; $\\displaystyle \\text{Cov}[X,Y] = E[(X-E[X])(Y-E[Y])^T] = E[XY^T] - E[X]E[Y]^T  \\in \\mathbb{R}^{D \\times P}$\n",
+    "\n",
+    "The expected value is linear, and so we have the following relationships:\n",
+    "\n",
+    "&emsp; $\\displaystyle \\mathbb{V}[A X + b] = A \\mathbb{V}[X] A^T$\n",
+    "&emsp; and\n",
+    "&emsp; $\\displaystyle \\mathbb{V}[X + Y] = \\mathbb{V}[X] + \\mathbb{V}[Y] + C[X,Y] + C[Y,X]$\n",
+    "\n",
+    "The **standard deviation** $\\sigma$ is the square root of the variance."
    ]
   },
   {
@@ -127,13 +139,13 @@
     "\n",
     "### Expected values\n",
     "\n",
-    "The **expected value** of a function $f \\in \\mathcal{X} \\rightarrow \\mathbb{R}$ applied on the value of $X$ is the average value that this function will take under the probability mass function of $X$:\n",
+    "The **expected value** of a function $f \\in \\mathcal{X} \\rightarrow \\mathbb{R}$ applied on the value of $X$ is the average value that this function will take under the probability mass function of $X$, and the **mean** is the expected value of the identity function:\n",
     "\n",
-    "&emsp; $\\displaystyle E_X[f] = \\int f(x) p(x) dx$\n",
-    "&emsp; (expected value of $f(X)$)\n",
+    "&emsp; $\\displaystyle \\mathbb{E}_X[f] = \\int f(x) p(x) dx$\n",
+    "&emsp;\n",
+    "&emsp; $\\displaystyle \\mathbb{E}_X[X] = \\int x p(x) dx$\n",
     "\n",
-    "&emsp; $\\displaystyle E_X[X] = \\int x p(x) dx$\n",
-    "&emsp; &emsp; (expected value of the random variable $X$)\n",
+    "As for the categorical variables, the expected value for continuous variable is linear.\n",
     "\n",
     "<br>\n",
     "\n",
@@ -141,9 +153,9 @@
     "\n",
     "The **variance** of $X$ is the expected value of the square of the difference between the values taken by the random variable $X$ and the mean value of $X$. The **standard deviation** is the square root of the variance, and expresses the *spread* of a distribution around its mean:\n",
     "\n",
-    "&emsp; $\\displaystyle \\sigma^2[X] = \\int (x - E[x])^2 p(x) dx$\n",
+    "&emsp; $\\displaystyle \\mathbb{V}[X] = \\int (x - E[x]) (x - E[x])^T p(x) \\, dx$\n",
     "&emsp; and\n",
-    "&emsp; $\\displaystyle \\text{Cov}[X,Y] = \\iint (x - E[X]) \\; (y - E[Y]) \\; p(x,y) \\; dx \\; dy$\n",
+    "&emsp; $\\displaystyle \\text{Cov}[X,Y] = \\iint (x - E[X]) \\; (y - E[Y])^T \\; p(x,y) \\; dx \\; dy$\n",
     "\n",
     "Some distributions do not have a variance because the integral is not defined."
    ]
@@ -196,8 +208,12 @@
    "source": [
     "<br>\n",
     "\n",
-    "# Independence\n",
+    "# Dependence and Independence\n",
     "---\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Independence\n",
     "\n",
     "Two random variables $X$ and $Y$ are independent if their joint distribution can be decomposed in the product of their marginal discribution:\n",
     "\n",
@@ -211,7 +227,19 @@
     "\n",
     "&emsp; $\\displaystyle \\text{Cov}[X,Y] = \\iint (x - E[X]) \\; (y - E[Y]) \\; p(x)p(y) \\; dx \\; dy = \\int (x - E[X]) \\; p(x) \\; dx \\int (y - E[Y]) \\; p(y) \\; dy = 0$\n",
     "\n",
-    "But if the covariance is zero, it does not mean the variables are independent."
+    "The covariance only measures linear relationship between variables. So if the covariance is zero, it does not mean the variables are independent.\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "### Correlation\n",
+    "\n",
+    "The **correlation factor** is a standard measure for the linear relationship between two variables:\n",
+    "\n",
+    "&emsp; $\\displaystyle \\boxed{r=\\frac{\\text{Cov}[X,Y]}{\\sqrt{\\mathbb{V}[X] \\mathbb{V}[Y]}}}=\\frac{\\text{Cov}[X,Y]}{\\sigma[x] \\sigma[y]}$\n",
+    "&emsp; which strangely ressembles:\n",
+    "&emsp; $\\displaystyle \\cos \\theta = \\frac{\\langle x, y \\rangle}{\\Vert x \\Vert \\Vert y \\Vert}$\n",
+    "\n",
+    "Indeed, we can show that the covariance is an inner product: the covariance is symmetric and definite positive. Its corresponding norm is therefore the square root of the variance. And so the correlation factor is always between -1 and 1."
    ]
   },
   {
