--- a/ml/1_3_classification.ipynb
+++ b/ml/1_3_classification.ipynb
@@ -251,6 +251,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Latent variables\n",
+    "---\n",
+    "\n",
+    "* todo: we are trying to find the latent variable that explain the generation of a point (that is the classification)\n",
+    "* todo: for generative model, we are trying to find the full distribution $p(x|C_k)$ (more latent variables)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Discriminative models\n",
+    "---\n",
+    "\n",
+    "* name them"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
