--- a/ml/0_basic_probabilities.ipynb
+++ b/ml/0_basic_probabilities.ipynb
@@ -195,19 +195,6 @@
    "source": [
     "<br>\n",
     "\n",
-    "# Odds\n",
-    "---\n",
-    "\n",
-    "* odds\n",
-    "* un-normalized probabilities"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<br>\n",
-    "\n",
     "# Dependence and Independence\n",
     "---\n",
     "\n",
@@ -240,6 +227,24 @@
     "&emsp; $\\displaystyle \\cos \\theta = \\frac{\\langle x, y \\rangle}{\\Vert x \\Vert \\Vert y \\Vert}$\n",
     "\n",
     "Indeed, we can show that the covariance is an inner product: the covariance is symmetric and definite positive. Its corresponding norm is therefore the square root of the variance. And so the correlation factor is always between -1 and 1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "# Odds\n",
+    "---\n",
+    "\n",
+    "Odds are **another representation of the same information as probabilities**. Given a probability $p$ we can compute its odds like:\n",
+    "\n",
+    "&emsp; $\\displaystyle \\boxed{o =\\frac{p}{1 - p}} \\iff \\boxed{p = \\frac{o}{o+1}}$\n",
+    "\n",
+    "This way of counting is particularly used as quotes in betting games. For instance, if we say the match A versus B quote is 1 against 3, it means that 25% of people betted for A to win, against 75% betting for B to win.\n",
+    "\n",
+    "Odds are particularly interesting when comparing quantities **when we do not know the normalization factor**, since the normalization factor will disappear when taking the ratio of two probability distributions."
    ]
   },
   {
