--- a/ml/0_basic_linear_algebra.ipynb
+++ b/ml/0_basic_linear_algebra.ipynb
@@ -235,6 +235,17 @@
    "source": [
     "<br>\n",
     "\n",
+    "### Complex and real eigenvalues\n",
+    "\n",
+    "**todo**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
     "# Matrix identities\n",
     "---\n",
     "\n",
