--- a/ml/0_basic_optimization_numeric.ipynb
+++ b/ml/0_basic_optimization_numeric.ipynb
@@ -106,15 +106,24 @@
     "\n",
     "### Stochastic Gradient Descent (SGD)\n",
     "\n",
-    "The most famous algorithm for Artificial Neural Network of the past years. The idea is to avoid computing the exact gradient $\\nabla f$, but instead compute an estimate of the gradient $\\tilde{\\nabla f}$ and use it to perform our gradient descent:\n",
+    "If the function to optimize $F$ is a **sum of the a fixed function applied to different inputs** $F = \\sum_n f(x_n)$, then the gradient of the function $F$ is the sum of the gradient of the function $f$ applied on these inputs. We can therefore see the gradient of $F$ as an expectation.\n",
+    "\n",
+    "&emsp; $\\displaystyle F = \\sum_n f(x_n)$\n",
+    "&emsp; $\\implies$\n",
+    "&emsp; $\\displaystyle F = \\mathbb{E}_{x \\sim X}[f]$\n",
+    "&emsp; and therefore\n",
+    "&emsp; $\\displaystyle \\nabla F = \\mathbb{E}_{x \\sim X}[\\nabla f]$\n",
+    "\n",
+    "The idea of SGD is compute an **estimate of the gradient** $\\tilde{\\nabla F}$ instead of the gradient to speed up the computations:\n",
     "\n",
     "&emsp; $x_{new} \\leftarrow x_{old} - \\alpha \\tilde{\\nabla f}$\n",
     "&emsp; where\n",
-    "&emsp; $\\alpha$ is called the learning rate\n",
+    "&emsp; $\\displaystyle \\tilde{\\nabla f} = \\frac{1}{K} \\sum_k \\nabla f(x_k)$\n",
+    "&emsp; on $K$ points randomly picked among the $N$ total points\n",
     "\n",
-    "Normally, the quantity we are trying to diminish is computed using the full training data. For instance, in the case of a regression, we are interested in minimizing the square distance of all points to their predicted outputs. SGD is obtained by **random sub-selection of the training data** to estimate of the gradient, for example by taking a mini-batch of 500 inputs among the 60,000 data points in input.\n",
+    "This works becomes **picking randomly** $K$ points among the $N$ points preserves the fact that the $K$ points will be **drawned from the same distribution** as the $N$ points. This **random sub-selection of the training data** is critical for the estimate to be good.\n",
     "\n",
-    "More sample points means the estimate of the gradient gets better but also more expensive to compute. The random nature of the sub-selection might also help us **avoiding saddle points**: fewer points means more fluctuations and more chances to escape."
+    "In practical terms and taking a particular example, SGD might be obtained by picking a mini-batch of 500 inputs among the 60,000 data points in input at each iteration. More sample points means the estimate of the gradient gets better but also more expensive to compute. The random nature of the sub-selection might also help us **avoiding saddle points**: fewer points means more fluctuations and more chances to escape."
    ]
   },
   {
