--- a/ml/0_basic_page_rank.ipynb
+++ b/ml/0_basic_page_rank.ipynb
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -233,25 +233,28 @@
     }
    ],
    "source": [
-    "N = len(g)\n",
+    "stay_prob = 0.5\n",
     "nodes = list(sorted(g.keys()))\n",
+    "N = len(nodes)\n",
+    "\n",
     "adj_matrix = np.zeros(shape=(N, N))\n",
     "for a, neigh in g.items():\n",
     "    a = ord(a)-ord('a')\n",
     "    degree = len(neigh)\n",
     "    if degree > 0:\n",
     "        # Continue to surf\n",
-    "        adj_matrix[a,a] = 1 / (degree + 1)\n",
+    "        adj_matrix[a,a] = 1 / (degree+1)\n",
     "        for b in neigh:\n",
     "            b = ord(b)-ord('a')\n",
-    "            adj_matrix[b,a] = 1 / (degree + 1)\n",
+    "            adj_matrix[b,a] = 1 / (degree+1)\n",
     "    else:\n",
     "        # Restart surfing\n",
     "        for b in nodes:\n",
     "            b = ord(b)-ord('a')\n",
-    "            adj_matrix[b,a] = 1 / (2 * (N-1))\n",
-    "        adj_matrix[a,a] = 1 / 2\n",
-    "        \n",
+    "            if b != a:\n",
+    "                adj_matrix[b,a] = (1-stay_prob) / (N - 1)\n",
+    "        adj_matrix[a,a] = stay_prob\n",
+    "\n",
     "print(np.round(adj_matrix, decimals=2))"
    ]
   },
@@ -268,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +279,7 @@
      "output_type": "stream",
      "text": [
       "Order: ['b', 'a', 'd', 'l', 'k', 'j', 'm', 'i', 'e', 'f', 'g', 'c', 'n', 'h']\n",
-      "Score: [0.42, 0.41, 0.39, 0.28, 0.28, 0.28, 0.27, 0.27, 0.24, 0.2, 0.12, 0.06, 0.04, 0.04]\n"
+      "Score: [(0.42+0j), (0.41+0j), (0.39+0j), (0.28+0j), (0.28+0j), (0.28+0j), (0.27+0j), (0.27+0j), (0.24+0j), (0.2+0j), (0.12+0j), (0.06+0j), (0.04+0j), (0.04+0j)]\n"
      ]
     },
     {
@@ -299,13 +302,7 @@
     "\n",
     "def rank_pages(m):\n",
     "    scores = np.zeros(N)\n",
-    "    vals, vects = eigen_vectors(adj_matrix)\n",
-    "    # print(vals)\n",
-    "    for i in range(len(vals)):\n",
-    "        if np.array_equal(vects[i], np.abs(vects[i])):\n",
-    "            # It is in fact the first one\n",
-    "            for d in range(N):\n",
-    "                scores[d] += abs(vects[i,d])\n",
+    "    val, scores = highest_eigenvector(adj_matrix)\n",
     "    idx = np.argsort(scores)[::-1]\n",
     "    return idx, scores[idx]\n",
     "\n",
