--- a/ml/0_basic_markov_process.ipynb
+++ b/ml/0_basic_markov_process.ipynb
@@ -205,9 +205,13 @@
     "\n",
     "&emsp; $\\alpha(z_n) = p(x_n|z_n) \\sum_{z_{n-1}} p(z_n|z_{n-1}) \\alpha(z_{n-1})$\n",
     "\n",
-    "We can do similarly for $\\beta$.\n",
+    "We can do similarly for $\\beta$:\n",
     "\n",
-    "**TODO**"
+    "&emsp; $\\beta(z_n) = p(x_{n+1} \\dots x_N | z_n)$\n",
+    "\n",
+    "&emsp; $\\beta(z_n) = \\sum_{z_{n+1}} p(x_{n+1} \\dots x_N | z_n, z_{n+1}) \\, p(z_{n+1}|z_n)$\n",
+    "\n",
+    "&emsp; $\\beta(z_n) = \\sum_{z_{n+1}} p(x_{n+1}|z_{n+1}) \\, p(x_{n+2} \\dots x_N | z_{n+1}) \\, p(z_{n+1}|z_n)$"
    ]
   },
   {
